# coloring_a_map

./: CMakeLists.txt  INSTRUCTIONS.txt  colorMap.cpp  colorMap.h  main.cpp  projectTests.cpp  projectTests.h
test_results/0_1/: result.json
test_results/0_2/: result.json
test_results/1_5/: result.json
test_results/7_0/: result.json
test_results/7_5/: result.json
test_results/7_9/: result.json
test_results/9_0/: result.json
test_results/9_1/: result.json
test_results/9_5/: result.json
